--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,33 +23,49 @@
 html {
   min-width: 360px;
   font-family: 'GeistMono', monospace;
-  background-color: #111111;
-  color: #ffffff;
 }
 
 @layer base {
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    @apply bg-white text-black;
+  }
+
+  .dark body {
+    @apply bg-[#111111] text-white;
   }
 
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Geist', sans-serif;
   }
-}
 
-@layer components {
-  .card {
-    background-color: rgba(23, 23, 23, 0.5);
-    border-radius: 0.5rem;
-    padding: 1rem;
-    transition: all 300ms;
-}
+  .dark .card {
+    background-color: rgba(23, 23, 23, 0.502);
+  }
 
-.card:hover {
+  .dark .card:hover {
     background-color: rgba(38, 38, 38, 0.5);
   }
 
+  .card {
+    background-color: rgba(233, 233, 233, 0.5);
+  }
+
+  .card:hover {
+    background-color: rgba(211, 211, 211, 0.5);
+  }
+
+  .dark .link-underline::after {
+    background-color: white;
+  }
+
+  .link-underline::after {
+    background-color: black;
+  }
+}
+
+@layer components {
   .link-underline {
     position: relative;
     display: inline-block;
@@ -62,7 +78,6 @@ html {
     bottom: 0;
     width: 0;
     height: 2px;
-    background-color: white;
     transition: all 0.3s;
   }
 
