--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,3 +97,21 @@ html {
     text-decoration: var(--shiki-dark-text-decoration) !important;
   }
 }
+
+.grainy::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
+  content: '';
+  height: 300%;
+  left: -100%;
+  pointer-events: none;
+  position: fixed;
+  top: -100%;
+  width: 300%;
+  will-change: transform;
+  z-index: 0;
+  opacity: 0.20;
+}
+
+.dark .grainy::before {
+  opacity: 0.05;
+}
